--- a/home.html
+++ b/home.html
@@ -12,3 +12,19 @@
 
 </head>
 <body>
+    <div class="Nav">
+        <a href="Home.html">Home</a>
+        <a href="Menu.html">Menu</a>
+        <a href="contact.html">Contact Us</a>
+    </div>
+    </div>
+             
+         <div class="Home">
+          <div class="row"> 
+             <div class="h1">
+        <h2><strong>Mojo's Pizzeria</strong></h2>
+        <h5><em>Pizza to fit any taste</em></h5>
+        </div>
+    </div>
+    </div>
+    <div class="footer">
