--- a/home.html
+++ b/home.html
@@ -28,3 +28,11 @@
     </div>
     </div>
     <div class="footer">
+        <footer>
+            <a href=""><img src=" images/social icons/skype.png" alt=""></a>
+              <a href=""><img src="images/social icons/twitter.png" alt=""></a>
+              <a href=""><img src="images/social icons/facebook.png" alt=""></a>
+             <a href=""><img src=" images/social icons/you_tube.png" alt=""></a>
+         </footer>
+       </body>
+       </html>
